# DJIPhotoCoords

./: .gitignore  DJIPhotoCoords.ipynb  DJIPhotoCoords.py  DJIPhotoCoordsGUI.py  DJIPhotoCoordsJupyter.ipynb  LICENSE  README.md
python/: DJIPhotoCoordsGUI.py
rust/dji_photo_coords/: Cargo.toml
rust/dji_photo_coords/src/: main.rs
