# Cargo.toml
[package]
name = "dji_photo_coords"
version = "0.1.0"
edition = "2021"

[dependencies]
egui    = "0.24.1"
eframe  = "0.24.1"
walkdir = "2.3.3"
csv     = "1.3.0"
anyhow  = "1.0.75"
rfd     = "0.12.1"
winapi  = { version = "0.3.9", features = ["winuser", "windef"] }

# kamadak-exif is the pure-Rust EXIF crate whose library name is `exif`
exif = { package = "kamadak-exif", version = "0.6.1" }
